# RDS1Engine

./: .gitignore  CMakeLists.txt
SRC/: Common.cpp  Common.h  Engine.cpp  Engine.h  Main.cpp  RDS1Engine.h
SRC/CLIENT/: CMakeLists.txt  Client.cpp  Client.h  MainClient.cpp
SRC/CLIENT/NET/: NetClient.cpp  NetClient.h
SRC/CLIENT/OGL/: RenderOGL.cpp  RenderOGL.h  ShaderOGL.cpp  ShaderOGL.h
SRC/CLIENT/RNDRCOMN/: Model.h  Texture.cpp  Texture.h  Viewport.cpp  Viewport.h
SRC/OGL/: RenderOGL.cpp  ShaderOGL.cpp
SRC/RNDRCOMN/: Texture.h
SRC/SERVER/: CMakeLists.txt  MainServer.cpp  Server.cpp  Server.h
SRC/SHARED/: Buffer.cpp  Buffer.h  Common.cpp  Common.h  Logging.cpp  Logging.h  Macros.h  NetProtocol.h  PlatformSpecific.h  Types.h
